--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "react-scripts": "5.0.1",
         "three": "^0.162.0",
         "tsparticles": "^3.3.0",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "ws": "^8.16.0"
     },
     "scripts": {
         "start": "react-app-rewired start",
