--- a/package.json
+++ b/package.json
@@ -12,22 +12,30 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@walletconnect/web3-provider": "^1.8.0",
+        "assert": "^2.1.0",
         "aws-sdk": "^2.1574.0",
         "axios": "^1.6.7",
+        "buffer": "^6.0.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "ethereum-blockies-base64": "^1.0.2",
         "express": "^4.18.3",
+        "https-browserify": "^1.0.0",
         "multer": "^1.4.5-lts.1",
+        "os-browserify": "^0.3.0",
         "react": "^18.2.0",
         "react-circular-progressbar": "^2.1.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
         "three": "^0.162.0",
         "tsparticles": "^3.3.0",
         "web-vitals": "^2.1.4",
+        "web3": "^4.6.0",
         "ws": "^8.16.0"
     },
     "scripts": {
