--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.4.5",
         "ethereum-blockies-base64": "^1.0.2",
         "express": "^4.19.2",
+        "gsap": "^3.12.5",
         "https-browserify": "^1.0.0",
         "mongoose": "^8.2.4",
         "multer": "^1.4.5-lts.1",
